# Dynamic-Astar

./: .gitignore  README.md  kill.sh  log.txt  run.sh
dya_astar_test/: CMakeLists.txt  package.xml
dya_astar_test/include/dyn_astar_test/: visualization.h
dya_astar_test/launch/: example.launch  example1.launch  example2.launch  example3.launch  example4.launch  example5.launch  kastar.xml
dya_astar_test/src/: dyn_astar_test_node.cpp  visual_pcl.cpp
dyn_astar/: package.xml
dyn_astar/include/dyn_astar/: kinodynamic_astar.h
dyn_astar/include/map_util/: map_util.h  sdf_map.cpp
dyn_astar/src/: kinodynamic_astar.cpp
dyn_astar_test/: CMakeLists.txt  package.xml
dyn_astar_test/launch/: example.launch  kastar.xml
dyn_astar_test/src/: plan_manage_node.cpp
src/dyn_astar/: CMakeLists.txt
src/dyn_astar/include/data_type/: data_type.h
src/dyn_astar/include/dyn_astar/: astar.h  kinodynamic_astar.h  map_util.h
src/dyn_astar/include/map_util/: map_util.h
src/dyn_astar/src/: astar.cpp  kinodynamic_astar.cpp
src/map_pcl/pcd/: cut.py  densify.py
src/map_pcl/src/: visual_pcl.cpp
src/path_searching/: CMakeLists.txt  package.xml
src/path_searching/src/: kinodynamic_astar.cpp
src/plan_env/: CMakeLists.txt
src/plan_env/src/: edt_environment.cpp  obj_predictor.cpp  sdf_map.cpp
src/plan_manage/: CMakeLists.txt  package.xml
src/plan_manage/config/: rviz.rviz
src/plan_manage/launch/: example.launch  example2.launch  example3.launch  example4.launch  kastar.xml  kstar.xml  simulation.launch
src/plan_manage/src/: plan_manage_node.cpp
(+5 files in other folders)
